route.yaml
apiVersion: v1
kind: Route
metadata:
  name: jenkins
spec:
  port:
    targetPort: console
  tls:
    termination: edge
  to:
    kind: Service
    name: jenkins
    weight: 100
  wildcardPolicy: None
